# codebattle-loderunner-clients

./: .gitignore
CodeBattleCPP/: CMakeLists.txt  CodeBattleCpp.cpp  CodeBattleCpp.sln  README.md
CodeBattleCPP/CodeBattleCpp/: CodeBattleCpp.cpp  CodeBattleCpp.vcxproj  CodeBattleCpp.vcxproj.filters  client.cpp  client.hpp  game_board.cpp  game_board.hpp  graphics.hpp  main.cpp  player_command.hpp  tile.hpp  vec.cpp  vec.hpp
CodeBattleCPP/CodeBattleCpp/x64/Debug/: vc141.idb
CodeBattleCPP/CodeBattleCpp/x64/Debug/CodeBattleCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CodeBattleCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CodeBattleCPP/CodeBattleCppLibrary/: BoardElement.cpp  BoardElement.h  BoardPoint.cpp  BoardPoint.h  CMakeLists.txt  CodeBattleCppLibrary.vcxproj  CodeBattleCppLibrary.vcxproj.filters  GameBoard.cpp  GameBoard.h  GameClientLodeRunner.cpp  GameClientLodeRunner.h  LodeRunnerAction.cpp  LodeRunnerAction.h  PlayerAction.h  utf8tools.h
CodeBattleCPP/CodeBattleCppLibrary/details/: BeastGameClient.cpp  BeastGameClient.h  GameClientInterface.h
CodeBattleCPP/CodeBattleCppLibrary/easywsclient/: CMakeLists.txt  easywsclient.cpp
CodeBattleCPP/CodeBattleCppLibrary/tests/: CMakeLists.txt  GameBoardTest.cpp
CodeBattleCPP/CodeBattleCppLibrary/x64/Debug/: CodeBattleCppLibrary.idb
CodeBattleCPP/CodeBattleCppLibrary/x64/Debug/CodeBatt.8F09F71F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CodeBattleCppLibrary.lastbuildstate  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog
CodeBattleCPP/x64/Debug/: CodeBattleCpp.ilk  CodeBattleCppLibrary.lib
CodeBattleJS/: Actions.js  CodeBattleJs.html  CodeBattleJsLibrary.js  Elements.js  GameClient.js  LoderunnerBoard.js  Point.js  README.md  Utils.js
CodeBattleJava/: build.gradle  readme.md  settings.gradle
CodeBattleJava/src/main/java/ru/codebattle/client/: LodeRunnerClient.java  Main.java  MyAI.java  ReconnectableLodeRunnerClientWrapper.java
CodeBattleJava/src/main/java/ru/codebattle/client/api/: BoardElement.java  BoardPoint.java  GameBoard.java  LoderunnerAction.java  LoderunnerBase.java
CodeBattleNet/: Loderunner.sln  README.md
CodeBattleNet/Demo/: Demo.csproj  LodeRunnerClient.cs  MyCustomLoderunnerAI.cs  Program.cs
CodeBattleNet/Loderunner/: LodeRunnerClient.cs  Loderunner.csproj  MyCustomLoderunnerAI.cs  MyLoderunnerBot.cs  Program.cs
CodeBattleNet/Loderunner.Api/: BoardElement.cs  BoardPoint.cs  ElementSet.cs  GameBoard.cs  Loderunner.Api.csproj  LoderunnerAction.cs  LoderunnerBase.cs
CodeBattlePython/: README.md  setup.py
CodeBattlePython/loderunnerclient/: LodeRunnerClient.py  Main.py  __main__.py  game_client.py
CodeBattlePython/loderunnerclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CodeBattlePython/loderunnerclient/internals/: actions.py  board.py  element.py  point.py
code_battle_dp/: CodeBattleCpp.sln  README.md
code_battle_dp/CodeBattleCpp/: CodeBattleCpp.vcxproj  CodeBattleCpp.vcxproj.filters  LodeRunnerBlocks.h  client.cpp  client.hpp  game_board.cpp  game_board.hpp  graphics.cpp  interpolation.cpp  interpolation.hpp  json.hpp  main.cpp  tile.hpp  window.cpp  window.hpp
